--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -142,11 +142,20 @@
                         <segue destination="fEb-nV-m3f" kind="presentation" identifier="OnboardingPageSegue" id="BBN-rh-MvJ"/>
                         <segue destination="UlM-dd-WqK" kind="show" identifier="BackgroundAnimationPageToAddingTagsPageSegue" id="tx2-If-MRg"/>
                         <segue destination="xAM-nQ-U75" kind="show" identifier="BackgroundAnimationToMatchesSegue" id="6Hf-IT-c8a"/>
+                        <segue destination="Z8r-2V-bSE" kind="show" identifier="BackgroundAnimationToEditProfileSegue" id="8X3-g7-6o4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1151.5" y="387.5"/>
+        </scene>
+        <!--EditProfileViewController-->
+        <scene sceneID="aXI-jz-yB4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="EditProfileViewController" id="Z8r-2V-bSE" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rnd-cT-l9a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="883.5" y="803"/>
         </scene>
         <!--MatchesViewController-->
         <scene sceneID="brk-a0-jbM">
@@ -154,7 +163,7 @@
                 <viewControllerPlaceholder storyboardIdentifier="MatchesViewController" storyboardName="Matches" referencedIdentifier="MatchesViewController" id="xAM-nQ-U75" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bGC-M3-gpR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="955.5" y="823"/>
+            <point key="canvasLocation" x="1029" y="907"/>
         </scene>
         <!--AddingTagsViewController-->
         <scene sceneID="lMl-sD-RRf">
@@ -162,7 +171,7 @@
                 <viewControllerPlaceholder storyboardName="AddingTags" referencedIdentifier="AddingTagsViewController" id="UlM-dd-WqK" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8YR-PJ-1zN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1151" y="886"/>
+            <point key="canvasLocation" x="1250" y="907"/>
         </scene>
         <!--Filtering-->
         <scene sceneID="hOT-6i-yVN">
