--- a/ChachaT/Matches.storyboard
+++ b/ChachaT/Matches.storyboard
@@ -42,5 +42,39 @@
             </objects>
             <point key="canvasLocation" x="550" y="656"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="hnA-2x-pPH">
+            <objects>
+                <viewController storyboardIdentifier="MatchNotificationViewController" id="Xsr-xP-4Bv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0UL-ja-9NS"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ut4-wV-Qwv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wFJ-NW-0C3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pbY-ff-Hsa">
+                                <frame key="frameInset" minX="158" minY="70" width="58" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="0ve-uB-jc7"/>
+                                    <constraint firstAttribute="width" constant="58" id="DjW-IO-DGj"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What A Pair!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaH-kR-4q7">
+                                <frame key="frameInset" minX="52" minY="124" width="269" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Ai-SB-Nbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1388" y="654.42278860569718"/>
+        </scene>
     </scenes>
 </document>
