--- a/ChachaT/Base.lproj/LaunchScreen.storyboard
+++ b/ChachaT/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="uC4-5H-4DA">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="uC4-5H-4DA">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="125" id="EuE-ML-FN2"/>
                                     <constraint firstAttribute="height" constant="100" id="VT8-pr-Pq6"/>
@@ -38,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="1024" height="1024"/>
+        <image name="Logo" width="125" height="177"/>
     </resources>
 </document>
