--- a/ChachaT/Matches.storyboard
+++ b/ChachaT/Matches.storyboard
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="550" y="656"/>
         </scene>
-        <!--View Controller-->
+        <!--Match Notification View Controller-->
         <scene sceneID="hnA-2x-pPH">
             <objects>
-                <viewController storyboardIdentifier="MatchNotificationViewController" id="Xsr-xP-4Bv" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MatchNotificationViewController" id="Xsr-xP-4Bv" customClass="MatchNotificationViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0UL-ja-9NS"/>
                         <viewControllerLayoutGuide type="bottom" id="Ut4-wV-Qwv"/>
@@ -54,27 +54,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pbY-ff-Hsa">
-                                <frame key="frameInset" minX="158" minY="70" width="58" height="51"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lYc-Yt-YFz">
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTY-cN-07s">
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PairCircle" translatesAutoresizingMaskIntoConstraints="NO" id="pbY-ff-Hsa">
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="51" id="0ve-uB-jc7"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="AXe-uo-5n2"/>
+                                                    <constraint firstAttribute="width" constant="58" id="DjW-IO-DGj"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="51" id="bA2-dc-WrH"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What A Pair!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaH-kR-4q7">
+                                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                                <color key="textColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="WaH-kR-4q7" firstAttribute="top" secondItem="pbY-ff-Hsa" secondAttribute="bottom" constant="1" id="5Um-2h-q2o"/>
+                                            <constraint firstItem="pbY-ff-Hsa" firstAttribute="top" secondItem="GTY-cN-07s" secondAttribute="top" id="5g0-hh-K5x"/>
+                                            <constraint firstItem="WaH-kR-4q7" firstAttribute="centerX" secondItem="GTY-cN-07s" secondAttribute="centerX" id="6Ye-K8-Dow"/>
+                                            <constraint firstAttribute="bottom" secondItem="WaH-kR-4q7" secondAttribute="bottom" constant="-7" id="YvE-EF-tOH"/>
+                                            <constraint firstItem="pbY-ff-Hsa" firstAttribute="centerX" secondItem="GTY-cN-07s" secondAttribute="centerX" id="olv-tQ-ZPW"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="200" placeholderIntrinsicHeight="236" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="CdC-lQ-P7s">
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="O49-fq-DuW">
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="80" id="brm-vN-qbz"/>
+                                                    <constraint firstAttribute="width" constant="70" id="xXD-jP-Gwh"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="50" placeholderIntrinsicHeight="50" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uMz-e9-rbf" userLabel="Button Stack View"/>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="0ve-uB-jc7"/>
-                                    <constraint firstAttribute="width" constant="58" id="DjW-IO-DGj"/>
+                                    <constraint firstItem="uMz-e9-rbf" firstAttribute="leading" secondItem="lYc-Yt-YFz" secondAttribute="leading" id="4Dc-tP-dgi"/>
+                                    <constraint firstAttribute="trailing" secondItem="uMz-e9-rbf" secondAttribute="trailing" id="6yX-v7-NRK"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What A Pair!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaH-kR-4q7">
-                                <frame key="frameInset" minX="52" minY="124" width="269" height="60"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lYc-Yt-YFz" firstAttribute="leading" secondItem="wFJ-NW-0C3" secondAttribute="leading" constant="20" id="Byk-hD-cKS"/>
+                            <constraint firstItem="lYc-Yt-YFz" firstAttribute="top" relation="lessThanOrEqual" secondItem="0UL-ja-9NS" secondAttribute="bottom" constant="50" id="HWg-th-f6d"/>
+                            <constraint firstItem="Ut4-wV-Qwv" firstAttribute="top" relation="lessThanOrEqual" secondItem="lYc-Yt-YFz" secondAttribute="bottom" constant="150" id="KFO-Yf-XzN"/>
+                            <constraint firstAttribute="trailing" secondItem="lYc-Yt-YFz" secondAttribute="trailing" constant="20" id="xe7-PL-JX9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="theButtonStackView" destination="uMz-e9-rbf" id="baj-9g-8Is"/>
+                        <outlet property="theUsersStackView" destination="CdC-lQ-P7s" id="mLV-06-x7Y"/>
+                        <segue destination="gaj-jv-PNF" kind="unwind" identifier="unwindToSwipingPage" unwindAction="unwindToSwipingPageWithSegue:" id="teq-s5-URX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ai-SB-Nbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="gaj-jv-PNF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1388" y="654.42278860569718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="125" height="177"/>
+        <image name="PairCircle" width="44" height="44"/>
+    </resources>
 </document>
